# de-toolbox

./: docker-compose.yml
dagster-app/: Dockerfile  README.md
ray-app/: pyproject.toml  quick-start.py
ray-app/app/: app.py
ray-app/data/: data_sample.py  inspect_sample.py  load_sample.py
ray-app/job/: job.py  script.py
