[tool.poetry]
name = "ray-app"
version = "0.1.0"
description = ""
authors = ["bangyuwen <bangyuwen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
ray = {extras = ["data", "serve", "train", "tune"], version = "^2.24.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
